- New feature: Support for Java 11

2.3.1 (05-02-2020)
- Refactor: upgraded fenixedu-academic-core and fenixedu-ulisboa-specifications dependencies 

2.3.0 (18-12-2019)
- Refactor: change usage of ExecutionSemester to ExecutionInterval

2.2.2 (26-07-2019)
