@@ -1,4 +1,5 @@
 - New feature: Support for Java 11
+- Refactor: Remove usage of deprecated method Degree.findDegreeCurricularPlan(LocalizedString)
 
 2.3.1 (05-02-2020)
 - Refactor: upgraded fenixedu-academic-core and fenixedu-ulisboa-specifications dependencies 
